--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.4",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.486.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
